--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-select": "^5.7.0",
     "react-select-country-list": "^2.2.3",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.8",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
