--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.43.1",
     "react-image-crop": "^10.0.9",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
