--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.1",
     "react-image-crop": "^10.0.9",
+    "react-moment": "^1.1.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
